--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>SkyMonitor</title>
-    <link href="./styles/style.css" rel="stylesheet" />
-    <link href="./manifest.json" rel="manifest" />
+    <link href="styles/style.css" rel="stylesheet" />
+    <link href="manifest.json" rel="manifest" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -76,10 +76,7 @@
       href="images/icons/favicon-16x16.png"
     />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta
-      name="msapplication-TileImage"
-      content="images/icons/ms-icon-144x144.png"
-    />
+    <meta name="msapplication-TileImage" content="images/logo.svg" />
     <meta name="theme-color" content="#ffffff" />
     <script>
       if ("serviceWorker" in navigator) {
