added new logo for pwa and fixed some path

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       href="images/icons/favicon-16x16.png"
     />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="images/logo.svg" />
+    <meta name="msapplication-TileImage" content="images/logo144.png" />
     <meta name="theme-color" content="#ffffff" />
     <script>
       if ("serviceWorker" in navigator) {
