--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </head>
   <body>
     <main>
-      <p>d</p>
+      <button id="addToHomeScreen">ADD</button>
     </main>
     <script defer src="scripts/jquery.js"></script>
     <script defer src="scripts/render.js"></script>
