service-worker off

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <meta name="msapplication-TileImage" content="images/logo144.png" />
     <meta name="theme-color" content="#ffffff" />
     <script>
-      if ("serviceWorker" in navigator) {
+      /*if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
           navigator.serviceWorker
             .register("service-worker.js")
@@ -100,7 +100,7 @@
         });
       } else {
         console.log("service worker is not supported");
-      }
+      }*/
     </script>
   </head>
   <body>
