--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             Войти
           </button>
         </form>
-        <button id="addToHomeScreen">Скачать на телефон</button>
+        <button id="addToHomeScreen">Скачать приложение</button>
       </div>
     </main>
     <script defer src="scripts/jquery.js"></script>
