added search bar and nav menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SkyMonitor</title>
     <link href="styles/style.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -104,9 +105,9 @@
     </script>
   </head>
   <body>
-    <main class="login-page" id="loginPage">
-      <div class="login-container">
-        <img class="login-logo" src="images/logob.png" alt="logo" />
+    <main>
+      <div class="login-page" id="loginPage">
+        <img class="login-logo" src="images/app%20icons/logob.png" alt="logo" />
         <form class="login-form">
           <div class="login-form__input-container">
             <input
@@ -130,7 +131,7 @@
             <p class="login-form__password-control" id="passwordControl"></p>
           </div>
 
-          <button id="submitFormButton" class="login-form__button">
+          <button type="button" id="submitFormButton" class="login-form__button">
             Войти
           </button>
         </form>
