--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>SkyMonitor</title>
     <link href="styles/style.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -131,7 +134,11 @@
             <p class="login-form__password-control" id="passwordControl"></p>
           </div>
 
-          <button type="button" id="submitFormButton" class="login-form__button">
+          <button
+            type="button"
+            id="submitFormButton"
+            class="login-form__button"
+          >
             Войти
           </button>
         </form>
@@ -139,7 +146,7 @@
       </div>
     </main>
     <script defer src="scripts/jquery.js"></script>
-    <script defer src="scripts/render.js"></script>
     <script defer src="scripts/loginFormHandler.js"></script>
+    <script defer src="scripts/render.js"></script>
   </body>
 </html>
