added report page

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
       </div>
     </main>
     <script defer src="scripts/jquery.js"></script>
+    <script defer src="scripts/data.js"></script>
     <script defer src="scripts/loginFormHandler.js"></script>
     <script defer src="scripts/render.js"></script>
   </body>
