added a calendar and set defualt date for it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>SkyMonitor</title>
     <link href="styles/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles/jqueryUI.css">
     <link href="manifest.json" rel="manifest" />
     <link
       rel="stylesheet"
@@ -146,6 +147,7 @@
       </div>
     </main>
     <script defer src="scripts/jquery.js"></script>
+    <script defer src="scripts/jqueryUI.js"></script>
     <script defer src="scripts/data.js"></script>
     <script defer src="scripts/loginFormHandler.js"></script>
     <script defer src="scripts/render.js"></script>
