--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>SkyMonitor</title>
     <link href="styles/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/jqueryUI.css">
+    <link rel="stylesheet" href="styles/jqueryUI.css" />
     <link href="manifest.json" rel="manifest" />
     <link
       rel="stylesheet"
@@ -150,6 +150,7 @@
     <script defer src="scripts/jqueryUI.js"></script>
     <script defer src="scripts/data.js"></script>
     <script defer src="scripts/loginFormHandler.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-mfuUNyE6pDg8rUoELHuBKXiOfE8yhuw&sensor=false&v=3.15"></script>
     <script defer src="scripts/render.js"></script>
   </body>
 </html>
